--- a/hs3.html
+++ b/hs3.html
@@ -39,10 +39,9 @@
 	<div class="col-sm-4">
   	<h2>Ota yhteyttä</h2>
   	<p>Tähän jotain tekstiä, jos haluaa</p>
-	<img src="yhteystiedot.JPG" alt="Kuva" class="yhteystiedot">
   	<form>
    	 <div class="form-group">
-      	<label>Nimi:</label>
+      	<label><img src="yhteystiedot.jpg" alt="kuva" class="yhteystiedot">Nimi:</label>
       	<input type="text" class="form-control">
     	</div>
    	 <div class="form-group">
