--- a/hs3.html
+++ b/hs3.html
@@ -34,7 +34,8 @@
    </ul> 
 </nav>
  
-<div class="container">
+<main>
+	<div class="container">
   <div class="row">
 	<div class="col-sm-4">
   	<h2>Ota yhteyttä</h2>
@@ -57,8 +58,7 @@
 	</div>
   </div>
 </div>
-				      
-
+</main>
 
 
 <footer id="footer">
