--- a/hs3.html
+++ b/hs3.html
@@ -39,10 +39,10 @@
   <div class="row">
 	<div class="col-sm-4">
   	<h2>Ota yhteyttä</h2>
-  	<p>Tähän jotain tekstiä, jos haluaa</p>
+  	<p><img src="yhteystiedot.jpg" alt="kuva" class="yhteystiedot">Tähän jotain tekstiä, jos haluaa</p>
   	<form>
    	 <div class="form-group">
-      	<label><img src="yhteystiedot.jpg" alt="kuva" class="yhteystiedot">Nimi:</label>
+      	<label>Nimi:</label>
       	<input type="text" class="form-control">
     	</div>
    	 <div class="form-group">
