--- a/hs3.html
+++ b/hs3.html
@@ -12,8 +12,7 @@
     <title>Hyvinvoiva sinä</title>
 	  
 	  
-  </head>
-  
+	</head>
 <body>
 	
 <header id="header">
@@ -39,7 +38,8 @@
   <div class="row">
 	<div class="col-sm-4">
   	<h2>Ota yhteyttä</h2>
-  	<p><img src="yhteystiedot.jpg" alt="kuva" class="yhteystiedot">Tähän jotain tekstiä, jos haluaa</p>
+		<aside>	<img src="yhteystiedot.jpg" alt="kuva" class="yhteystiedot"></aside>
+  	<p>Tähän jotain tekstiä, jos haluaa</p>
   	<form>
    	 <div class="form-group">
       	<label>Nimi:</label>
