--- a/hs3.html
+++ b/hs3.html
@@ -34,9 +34,9 @@
 </nav>
  
 <main>
-	<div class="container">
+<div class="container">
   <div class="row">
-	<div class="col-sm-4">
+	<div class="col-lg-6">
   	<h2>Ota yhteyttä</h2>
   	<p>Tähän jotain tekstiä, jos haluaa</p>
   	<form>
@@ -55,8 +55,16 @@
 	<button type="button" class="btn btn-primary btn-sm">Toimimaton nappi :)</button>						    
   	</form>
 	</div>
+	<div class="col-lg-6">
+      <h3>Column 4</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
   </div>
 </div>
+
+							    
+							    
 </main>
 
 
