--- a/hs3.html
+++ b/hs3.html
@@ -55,10 +55,8 @@
 	<button type="button" class="btn btn-primary btn-sm">Toimimaton nappi :)</button>						    
   	</form>
 	</div>
-	<div class="col-lg-6">
-      <h3>Column 4</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+	<div class="col-lg-6"> 
+      <img src="yhteystiedot.jpg" alt="Kuva yhteystiedoista" class="yhteystiedot">
     </div>
   </div>
 </div>
