--- a/hsindex.html
+++ b/hsindex.html
@@ -43,7 +43,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
- </div<>
+ </div>
 </div>
 	  
 	  
