--- a/hs3.html
+++ b/hs3.html
@@ -45,7 +45,7 @@
       	<input type="text" class="form-control">
     	</div>
    	 <div class="form-group">
-     	 <label">Sähköposti:</label>
+     	 <label>Sähköposti:</label>
       	<input type="text" class="form-control">
     	</div>
 	<div class="form-group">
