--- a/components.html
+++ b/components.html
@@ -15,12 +15,11 @@
 <body>
 <h1>Tervetuloa tänne!</h1>
   
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
+<nav class="navbar">
     <a href="#">Tässä Navbar</a>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a href="#">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Features</a>
