--- a/components.html
+++ b/components.html
@@ -19,13 +19,13 @@
     <a href="#">Tässä Navbar</a>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="#">Home</a>
+          <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">Contact</a>
         </li>
       </ul>
   </div>
