--- a/components.html
+++ b/components.html
@@ -15,7 +15,7 @@
 <body>
 <h1>Tervetuloa tänne!</h1>
   
-<nav class="navbar">
+<nav class="navbar navbar-light">
     <a href="#">Tässä Navbar</a>
       <ul class="navbar-nav">
         <li class="nav-item">
