--- a/components.html
+++ b/components.html
@@ -17,6 +17,7 @@
   
 <nav class="navbar navbar-light">
     <a href="#">Tässä Navbar</a>
+  <div class="collapse navbar-collapse"
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="#">Home</a>
