--- a/components.html
+++ b/components.html
@@ -15,7 +15,7 @@
 <body>
 <h1>Tervetuloa tänne!</h1>
   
-<nav class="navbar navbar-light">
+<nav class="navbar navbar-light bg-black">
     <a href="#">Tässä Navbar</a>
   <div class="collapse navbar-collapse"
       <ul class="navbar-nav">
