--- a/components.html
+++ b/components.html
@@ -16,7 +16,7 @@
 <h1>Tervetuloa tänne!</h1>
   
 <nav class="navbar navbar-light bg-black">
-    <a href="#">Tässä Navbar</a>
+    <a href="#" class="navbar-brand">Tässä Navbar</a>
   <div class="collapse navbar-collapse">
       <ul class="navbar-nav">
         <li class="nav-item">
