--- a/components.html
+++ b/components.html
@@ -14,7 +14,7 @@
   <body>
     <h1>Tervetuloa tänne!</h1>
     
-  <nav class="navbar navbar-white bg-black">
+  <nav class="navbar navbar-dark bg-dark">
     <a href="#" class="navbar-brand">Tässä Navbar</a>
   <div class="collapse navbar-collapse">
       <ul class="navbar-nav">
