--- a/components.html
+++ b/components.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-dark bg-dark">
     <a href="#" class="navbar-brand">Tässä Navbar</a>
   <div class="collapse navbar-collapse">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="#">Home</a>
         </li>
