--- a/components.html
+++ b/components.html
@@ -31,6 +31,8 @@
   </div>
 </nav>  
   
+<img src="IMG_5523.jpg" class="img-fluid" alt="Kukkia pellolla">    
+    
   
 <div class="container">
   <div class="row">
