--- a/components.html
+++ b/components.html
@@ -33,6 +33,8 @@
   
 <img src="IMG_5523.jpg" class="img-fluid" alt="Kukkia pellolla">    
     
+<img src="http://www.hyvinvoivasina.fi/attachments/Image/IMG_8835.jpg" class="rounded-circle" alt="Hoitopöytä" width="304" height="236">     
+    
   
 <div class="container">
   <div class="row">
