--- a/components.html
+++ b/components.html
@@ -39,6 +39,8 @@
   </div>
 </nav>  
   
+<button type="button" class="btn btn-primary btn-lg btn-block">Tässä näemme jättimäisen buttonin</button> 
+    
 <img src="IMG_5523.jpg" class="img-fluid" alt="Kukkia pellolla">    
     
 <img src="http://www.hyvinvoivasina.fi/attachments/Image/IMG_8835.jpg" class="rounded-circle" alt="Hoitopöytä" width="304" height="236">     
