--- a/components.html
+++ b/components.html
@@ -40,6 +40,7 @@
 </nav>  
   
 <button type="button" class="btn btn-primary btn-lg btn-block">Tässä näemme jättimäisen buttonin</button> 
+<button type="button" class="btn btn-default">Tässä Default button</button>    
     
 <img src="IMG_5523.jpg" class="img-fluid" alt="Kukkia pellolla">    
     
