--- a/components.html
+++ b/components.html
@@ -39,7 +39,7 @@
   </div>
 </nav>  
   
-<button type="button" class="btn btn-primary btn-lg btn-block">Tässä näemme jättimäisen buttonin</button> 
+<button type="button" class="btn btn-primary btn-lg">Tässä näemme ison buttonin</button > 
 <button type="button" class="btn btn-default">Tässä Default button</button>    
     
 <img src="IMG_5523.jpg" class="img-fluid" alt="Kukkia pellolla">    
