--- a/components.html
+++ b/components.html
@@ -40,7 +40,8 @@
 </nav>  
   
 <button type="button" class="btn btn-primary btn-lg">Tässä näemme ison buttonin</button > 
-<button type="button" class="btn btn-default">Tässä Default button</button>    
+<button type="button" class="btn btn-default">Tässä Default button</button>   
+<button type="button" class="btn btn-outline-success">Tässä Success!</button>    
     
 <img src="IMG_5523.jpg" class="img-fluid" alt="Kukkia pellolla">    
     
