--- a/components.html
+++ b/components.html
@@ -20,6 +20,7 @@
   </div>
 </div>   
     
+    <p>Tässä kellon kuva <span class="oi oi-icon-name" title="icon name" aria-hidden="true"></span></p>
 
     
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
