--- a/components.html
+++ b/components.html
@@ -53,7 +53,7 @@
   
 <div class="container">
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-lg-6">
      <img src="http://www.hyvinvoivasina.fi/attachments/Image/IMG_8835.jpg" class="rounded-circle" alt="Hoitopöytä" width="304" height="236">     
     </div>
    </div>
