--- a/tableform.html
+++ b/tableform.html
@@ -21,16 +21,20 @@ th, td {
 <table>
   <caption>Monthly savings</caption>
   <tr>
-    <th>Month</th>
-    <th>Savings</th>
+    <th>Etunimi</th>
+    <th>Sukunimi</th>
+    <th>Puhelinnumero(t)</th>
   </tr>
   <tr>
-    <td>January</td>
-    <td>$100</td>
+    <td>Teppo</td>
+    <td>Testinen</td>
+    <td>044123</td>
+    <td>044555</td>
   </tr>
   <tr>
-    <td>February</td>
-    <td>$50</td>
+    <td>Tiina</td>
+    <td>Testinen</td>
+    <td>050111</td>
   </tr>
 </table>
 
