--- a/tableform.html
+++ b/tableform.html
@@ -23,7 +23,7 @@ th, td {
   <tr>
     <th>Etunimi</th>
     <th>Sukunimi</th>
-    <th>Puhelinnumero(t)</th>
+    <th colspan="2">Puhelinnumero(t)</th>
   </tr>
   <tr>
     <td>Teppo</td>
@@ -35,6 +35,7 @@ th, td {
     <td>Tiina</td>
     <td>Testinen</td>
     <td>050111</td>
+    <td> - </td>
   </tr>
 </table>
 
