--- a/tableform.html
+++ b/tableform.html
@@ -15,11 +15,11 @@ th, td {
   
 <body>
 
-<h2>Table Caption</h2>
-<p>To add a caption to a table, use the caption tag.</p>
+<h2>Testitaulukko</h2>
+<p>Testaajien tiedot taulukkomuodossa</p>
 
 <table>
-  <caption>Monthly savings</caption>
+  <caption>Testihenkilöt</caption>
   <tr>
     <th>Etunimi</th>
     <th>Sukunimi</th>
