--- a/tableform.html
+++ b/tableform.html
@@ -24,36 +24,42 @@ th, td {
     <th>Etunimi</th>
     <th>Sukunimi</th>
     <th colspan="2">Puhelinnumero(t)</th>
+    <th>Sähköposti</th>
   </tr>
   <tr>
     <td>Teppo</td>
     <td>Testinen</td>
     <td>044123</td>
     <td>044555</td>
+    <td>teppoatteppocom</td>
   </tr>
   <tr>
     <td>Tiina</td>
     <td>Testinen</td>
     <td>050111</td>
     <td> - </td>
+    <td>tiina@tiinacom</td>
   </tr>
   <tr>
     <td>Teija</td>
     <td>Testikäs</td>
     <td>050999</td>
     <td>044222</td>
+    <td>teija@teijanmailifi</td>
   </tr>
   <tr>
     <td>Tero</td>
     <td>Testikäs</td>
     <td>050111</td>
     <td> - </td>
+    <td>teronmaili@testifi</td>
   </tr>
   <tr>
     <td>Seppo</td>
     <td>Sepponen</td>
     <td>050666</td>
     <td> - </td>
+    <td>seppotietaa@seppofi</td>
   </tr>
 </table>
 
