--- a/tableform.html
+++ b/tableform.html
@@ -62,6 +62,22 @@ th, td {
     <td>seppotietaa@seppofi</td>
   </tr>
 </table>
+  
+  
+ <h1>Liity mukaan!</h1>
+
+<form action="/action_page.php">
+  <label for="name">Etunimi:</label>
+  <input type="text" id="etunimi" name="nimi" required>
+  <input type="submit">
+</form> 
+  
+ <form action="/action_page.php">
+  <label for="name">Sukunimi:</label>
+  <input type="text" id="sukunimi" name="nimi" required>
+  <input type="submit">
+</form>  
+  
 
 </body>
 </html>
