--- a/tableform.html
+++ b/tableform.html
@@ -66,14 +66,13 @@ th, td {
   
  <h1>Liity mukaan!</h1>
 
-<form action="/action_page.php">
+<form>                     
   <label for="name">Etunimi:</label>
-  <input type="text" id="etunimi" name="nimi" required>
-</form> 
-  
- <form action="/action_page.php">
+  <input type="text" id="etunimi" name="etunimi" required> 
   <label for="name">Sukunimi:</label>
-  <input type="text" id="sukunimi" name="nimi" required>
+  <input type="text" id="sukunimi" name="sukunimi" required>
+  <label for="name">Sähköposti:</label>
+  <input type="text" id="sposti" name="sposti" required> 
 </form>  
   
 
