--- a/tableform.html
+++ b/tableform.html
@@ -68,13 +68,20 @@ th, td {
 
 <form>                     
   <label for="name">Etunimi:</label>
-  <input type="text" id="etunimi" name="etunimi" required> 
+  <input type="text" id="etunimi" name="etunimi" required> </br>
   <label for="name">Sukunimi:</label>
-  <input type="text" id="sukunimi" name="sukunimi" required>
+  <input type="text" id="sukunimi" name="sukunimi" required></br>
   <label for="name">Sähköposti:</label>
-  <input type="text" id="sposti" name="sposti" required> 
+  <input type="text" id="sposti" name="sposti" required> </br>
+
+  <h2>Kommenttisi</h2>
+  <textarea rows="4" cols="80" name="comment" required>
+  </textarea>
+  <input type="Lähetä">
+
 </form>  
   
+
 
 </body>
 </html>
