--- a/tableform.html
+++ b/tableform.html
@@ -79,6 +79,12 @@ th, td {
   </textarea>
   <input type="Lähetä">
 
+<form action="">    
+   <input type="checkbox" name="boxi"> Haluan mukaan. <br />    
+   <input type="checkbox" name="boxi"> Hyväksyn kaikki säännöt.     
+</form> 
+
+
 </form>  
   
 
