--- a/tableform.html
+++ b/tableform.html
@@ -77,7 +77,7 @@ th, td {
   <h2>Kommenttisi</h2>
   <textarea rows="4" cols="80" name="comment" required>
   </textarea>
-  <input type="Lähetä">
+  <input type="Submit">
 
 <form action="">    
    <input type="checkbox" name="boxi"> Haluan mukaan. <br />    
