--- a/tableform.html
+++ b/tableform.html
@@ -77,13 +77,16 @@ th, td {
   <h2>Kommenttisi</h2>
   <textarea rows="4" cols="80" name="comment" required>
   </textarea>
-  <input type="Submit">
-
-<form action="">    
+ 
    <input type="checkbox" name="boxi"> Haluan mukaan. <br />    
-   <input type="checkbox" name="boxi"> Hyväksyn kaikki säännöt.     
-</form> 
+   <input type="checkbox" name="boxi"> Hyväksyn kaikki säännöt.  
 
+  <select name="FIN/ENG/SVE">    
+      <option value="Suomi">Delhi</option>    
+      <option value="English">Jaipur</option>    
+      <option value="Svenska" selected="selected">Udaipur</option>    
+   </select>   
+ <input type="Submit">
 
 </form>  
   
