--- a/tableform.html
+++ b/tableform.html
@@ -76,7 +76,7 @@ th, td {
 
   <h2>Kommenttisi</h2>
   <textarea rows="4" cols="80" name="comment" required>
-  </textarea>
+  </textarea> </br>
  
    <input type="checkbox" name="boxi"> Haluan mukaan. <br />    
    <input type="checkbox" name="boxi"> Hyväksyn kaikki säännöt.  
@@ -86,7 +86,7 @@ th, td {
       <option value="English">Jaipur</option>    
       <option value="Svenska" selected="selected">Udaipur</option>    
    </select>   
- <input type="Submit">
+ <input type="Lähetä">
 
 </form>  
   
