--- a/tableform.html
+++ b/tableform.html
@@ -85,7 +85,7 @@ th, td {
       <option value="Suomi">Delhi</option>    
       <option value="English">Jaipur</option>    
       <option value="Svenska" selected="selected">Udaipur</option>    
-   </select>   
+   </select>   </br>
  <input type="Lähetä">
 
 </form>  
