--- a/tableform.html
+++ b/tableform.html
@@ -77,16 +77,15 @@ th, td {
   <h2>Kommenttisi</h2>
   <textarea rows="4" cols="80" name="comment" required>
   </textarea> </br>
- 
-   <input type="checkbox" name="boxi"> Haluan mukaan. <br />    
-   <input type="checkbox" name="boxi"> Hyväksyn kaikki säännöt.  
+   
+ <input type="checkbox" name="boxi"> Hyväksyn kaikki säännöt. </br>
 
   <select name="FIN/ENG/SVE">    
       <option value="Suomi">Delhi</option>    
       <option value="English">Jaipur</option>    
       <option value="Svenska" selected="selected">Udaipur</option>    
    </select>   </br>
- <input type="Lähetä">
+ <input type="Add new user/Lisää uusi käyttäjä">
 
 </form>  
   
