--- a/tableform.html
+++ b/tableform.html
@@ -80,10 +80,11 @@ th, td {
    
  <input type="checkbox" name="boxi"> Hyväksyn kaikki säännöt. </br>
 
-  <select name="FIN/ENG/SVE">    
-      <option value="Suomi">Delhi</option>    
-      <option value="English">Jaipur</option>    
-      <option value="Svenska" selected="selected">Udaipur</option>    
+  <label>FIN/ENG/SVE:</label>
+  <select>    
+      <option value="Suomi">Suomi</option>    
+      <option value="English">English</option>    
+      <option value="Svenska">Suomi</option>    
    </select>   </br>
  <input type="Add new user/Lisää uusi käyttäjä">
 
