--- a/tableform.html
+++ b/tableform.html
@@ -84,7 +84,7 @@ th, td {
   <select>    
       <option value="Suomi">Suomi</option>    
       <option value="English">English</option>    
-      <option value="Svenska">Suomi</option>    
+      <option value="Svenska">Ruotsi</option>    
    </select>   </br>
  <input type="Add new user/Lisää uusi käyttäjä">
 
