--- a/tableform.html
+++ b/tableform.html
@@ -68,29 +68,27 @@ th, td {
 
 <form>                     
   <fieldset>
-    <legend>Henkilötiedot:</legend>
+    <legend>Täytä alle:</legend>
       <label>Etunimi:</label>
         <input type="text" required><br><br>
       <label>Sukunimi:</label>
        <input type="text" required><br><br>
       <label>Sähköposti:</label>
        <input type="email" required><br><br>
- </fieldset>
-
-  <h2>Kommenttisi</h2>
+    
+  <h2>Viestisi</h2>
   <textarea rows="4" cols="80" name="comment" required>
-  </textarea> </br>
-   
- <input type="checkbox" name="boxi"> Hyväksyn kaikki säännöt. </br>
-
+  </textarea> <br><br>
+ <input type="checkbox" name="boxi"> Hyväksyn kaikki säännöt. <br><br>
   <label>FIN/ENG/SVE:</label>
   <select>    
       <option value="Suomi">Suomi</option>    
       <option value="English">English</option>    
       <option value="Svenska">Ruotsi</option>    
-   </select>   </br>
+   </select>   <br><br>
  <input type="Add new user/Lisää uusi käyttäjä">
-
+</fieldset>
+  
 </form>  
   
 
