--- a/tableform.html
+++ b/tableform.html
@@ -9,7 +9,7 @@
 <h1>Testitaulukko</h1>
 <p>Testaajien tiedot taulukkomuodossa</p>
 
-<table>
+<table id="testi">
   <caption>Testihenkilöt</caption>
   <tr>
     <th>Etunimi</th>
