--- a/tableform.html
+++ b/tableform.html
@@ -70,7 +70,7 @@
   <h4>Viestisi</h4>
   <textarea rows="4" cols="80" name="comment" required>
   </textarea> <br><br>
- <input type="checkbox" name="boxi"> Hyväksyn kaikki säännöt. <br><br>
+ <input type="checkbox" id="boxi" name="boxi"> Hyväksyn kaikki säännöt. <br><br>
   <label>FIN/ENG/SVE:</label>
   <select>    
       <option value="Suomi">Suomi</option>    
