--- a/tableform.html
+++ b/tableform.html
@@ -77,7 +77,7 @@
       <option value="English">English</option>    
       <option value="Svenska">Ruotsi</option>    
    </select>   <br><br>
- <input type="Add new user/Lisää uusi käyttäjä">
+ <input type="Submit" id="submit" name="submit">Add new user.
 </fieldset>
   
 </form>  
