--- a/tableform.html
+++ b/tableform.html
@@ -77,7 +77,7 @@
       <option value="English">English</option>    
       <option value="Svenska">Ruotsi</option>    
    </select>   <br><br>
- <input type="Submit" id="submit" name="submit">
+ <input type="Submit" value="Add new user">
 </fieldset>
   
 </form>  
