--- a/tableform.html
+++ b/tableform.html
@@ -61,16 +61,16 @@
   <fieldset>
     <legend>Täytä alle:</legend>
       <label>Etunimi:</label>
-        <input type="text" required><br><br>
+        <input id="nimi" type="text" required><br><br>
       <label>Sukunimi:</label>
-       <input type="text" required><br><br>
+       <input id="nimi" type="text" required><br><br>
       <label>Sähköposti:</label>
-       <input type="email" required><br><br>
+       <input id="nimi" type="email" required><br><br>
     
   <h4>Viestisi</h4>
   <textarea rows="4" cols="80" name="comment" required>
   </textarea> <br><br>
- <input type="checkbox" id="boxi" name="boxi"> Hyväksyn kaikki säännöt. <br><br>
+ <input type="checkbox" name="boxi"> Hyväksyn kaikki säännöt. <br><br>
   <label>FIN/ENG/SVE:</label>
   <select>    
       <option value="Suomi">Suomi</option>    
