--- a/tableform.html
+++ b/tableform.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <title>Taulukkojuttuja</title>
 <link rel="stylesheet" href="styletable.css">
 </head>
   
