--- a/tableform.html
+++ b/tableform.html
@@ -62,11 +62,11 @@
   <fieldset>
     <legend>Täytä alle:</legend>
       <label>Etunimi:</label>
-        <input id="nimi" type="text" required><br><br>
+        <input class="nimi" type="text" required><br><br>
       <label>Sukunimi:</label>
-       <input id="nimi" type="text" required><br><br>
+       <input class="nimi" type="text" required><br><br>
       <label>Sähköposti:</label>
-       <input id="nimi" type="email" required><br><br>
+       <input class="nimi" type="email" required><br><br>
     
   <h4>Viestisi</h4>
   <textarea rows="4" cols="80" name="comment" required>
