--- a/advanced.html
+++ b/advanced.html
@@ -17,7 +17,8 @@
     a vestibulum tellus mauris in neque. Aliquam rutrum vitae nisi non auctor. </p>
 </div>
 
-    
+<div id="teksti">
+  <h2>Tällä tekstilllä on varjo!</h2>
   
 
 </body
