--- a/advanced.html
+++ b/advanced.html
@@ -19,6 +19,17 @@
 
 <div id="teksti">
   <h2>Tällä tekstilllä on varjo!</h2>
+</div>  
+    
+<div id="tausta">
+  <h2>Heippa!</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper pretium sapien scelerisque fringilla. 
+    Curabitur quis sem eu massa semper molestie sit amet nec neque. Fusce rutrum, nibh tempus elementum laoreet, lacus libero venenatis lorem, 
+    a vestibulum tellus mauris in neque. Aliquam rutrum vitae nisi non auctor. 
+  </p>
+</div>
+  
+  
   
 
 </body
