--- a/advanced.html
+++ b/advanced.html
@@ -4,7 +4,7 @@
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="aadvanced_style.css">
+    <link rel="stylesheet" href="advanced_style.css">
     <title>Tehtävä 11</title>
     
   </head>
