--- a/advanced.html
+++ b/advanced.html
@@ -29,7 +29,10 @@
   </p>
 </div>
   
-  
+
+  <p>Tästä linkistä pääset Googleen</p> <a href="https://www.google.com" target="_blank">Google.com</a>
+  <p>Tästä linkistä pääset Hesarille</p> <a href="https://www.hs.fi" target="_blank">Hesari</a>
+
   
 
 </body
