--- a/advanced.html
+++ b/advanced.html
@@ -30,8 +30,11 @@
 </div>
   
 
-  <p>Tästä linkistä pääset Googleen</p> <a href="https://www.google.com" target="_blank">Google.com</a>
-  <p>Tästä linkistä pääset Hesarille</p> <a href="https://www.hs.fi" target="_blank">Hesari</a>
+  <p>Tästä linkkejä:</p> <br>
+ <div id="linkit">
+   <a href="https://www.google.com" target="_blank">Google.com</a>
+   <a href="https://www.hs.fi" target="_blank">Hesari</a>
+ </div>
 
   
 
