--- a/advanced.html
+++ b/advanced.html
@@ -32,7 +32,7 @@
 
   <p>Tästä linkkejä:</p> <br>
  <div id="linkit">
-   <a href="https://www.google.com" target="_blank">Google.com</a>
+   <a href="https://www.google.com" target="_blank">Google.com</a></br>
    <a href="https://www.hs.fi" target="_blank">Hesari</a>
  </div>
 
