--- a/advanced.html
+++ b/advanced.html
@@ -32,11 +32,11 @@
 
   <p>Tästä linkkejä:</p> <br>
  
-   <a href="https://www.google.com" target="_blank">Google.com</a></br>
+   <a href="https://www.google.com" target="_blank">Google.com</a><br>
    <a href="https://www.hs.fi" target="_blank">Hesari</a>
 
 
   
 
-</body
+  </body>
 </html>
